[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_analysis_toolkit"
version = "0.1.0"
authors = [
  { name="Legendre 李睿东" },
]
description = "A toolkit for data analysis and plotting"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["py_analysis_toolkit"]

[tool.setuptools.package-data]
"py_analysis_toolkit" = ["*.npy"]
